removing AS 5.0.0 support